# yolo_gpu_detect

./: .gitignore  CMakeLists.txt  package.xml
include/yolo_pose_buff/: inference.h
launch/: addMVlaunch.py
model/: armor_fp16.onnx
src/: classes.yaml  inference.cpp  main.cpp
